--- a/app/index.html
+++ b/app/index.html
@@ -9,18 +9,18 @@ current: index
 <section>
   <div class="banner">
     <div class="container">
-      <p class="subTitle">Promise-Desert 2020 早春系列</p>
-      <h1>看得清，才能看得遠</h1>
-      <p class="btn"><a href="#">立即購買</a></p>
+      <p class="subTitle" data-aos="fade-up">Promise-Desert 2020 早春系列</p>
+      <h1 data-aos="fade-up">看得清，才能看得遠</h1>
+      <p class="btn" data-aos="fade-up"><a href="#">立即購買</a></p>
     </div>
   </div>
 </section>
 
 <section>
   <div class="iconTitle">
-    <div class="container">
+    <div class="container" data-aos="fade-up">
       <div class="iconContent">
-        <h2>用專業的心，做專業的事</h2>
+        <h2 >用專業的心，做專業的事</h2>
         <ul class="serviceContent">
           <li>
             <img src="https://h1nr9.github.io/week3-glasses-website/assets/images/home-section2-1.png" alt="單一價格">
@@ -52,7 +52,7 @@ current: index
 <section>
   <div class="classicBg">
     <div class="container">
-      <div class="classicContent">
+      <div class="classicContent" data-aos="fade-up">
         <h2 class="classic">經典系列鏡框</h2>
         <ui class="classicList">
           <li>
@@ -77,13 +77,13 @@ current: index
   <div class="jointName">
     <div class="container">
       <div class="jointContent">
-        <h2>聯名設計鏡框</h2>
+        <h2 data-aos="fade-up">聯名設計鏡框</h2>
         <ul class="jointList">
-          <li>
+          <li data-aos="fade-up">
             <div class="jointImg-a"></div>
             <p><a href="#">DOUBLE A+</a></p>
           </li>
-          <li>
+          <li data-aos="fade-up">
              <div class="jointImg-b"></div>
             <p><a href="#">YOUTH</a></p>
           </li>
@@ -95,7 +95,7 @@ current: index
 
 <section>
   <div class="recommend">
-    <div class="container">
+    <div class="container" data-aos="fade-up">
       <div class="recommendContent">
         <h2>顧客推薦</h2>
         <ul>
@@ -150,7 +150,7 @@ current: index
 <section>
   <div class="contactFrom">
     <div class="container">
-      <div class="formContent">
+      <div class="formContent" data-aos="fade-up">
         <h2>聯絡我們</h2>
         <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
         <form action="get">
